<?xml version="1.0"?>
<package>
  <name>jps3d_ros</name>
  <version>0.0.0</version>
  <description>The JPS3D ROS package</description>

  <maintainer email="evandanrao@gmail.com">Vandan Eddya Rao</maintainer>
  <author email="evandanrao@gmail.com">Vandan Eddya Rao</author> 
  <license>BSD-3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>

  <build_depend>jps3d</build_depend>
  <build_depend>jps3d</build_depend>

  <build_depend>snapstack_msgs</build_depend>
  <build_depend>snapstack_msgs</build_depend>
  
  <build_depend>tf2_sensor_msgs</build_depend>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
